@@ -1,3 +1,8 @@
+2015-02-21  Niels Möller  <nisse@lysator.liu.se>
+
+	* gmp-h.in (mpn_divexact_1): New public declaration.
+	* gmp-impl.h: Moved from here.
+
 2015-02-08  Niels Möller  <nisse@lysator.liu.se>
 
 	* doc/gmp.texi (Low-level Functions): Document mpn_cnd_swap.
